prevent sticky bar from jumping on safari

--- a/src/scss/components/attendees.scss
+++ b/src/scss/components/attendees.scss
@@ -13,6 +13,8 @@
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0 2px 2px $gray1;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
 
     @media(min-width:400px) {
         width:150px;
